# src/api/swagger/swagger.yaml
@@ -106,16 +106,16 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/Error"
-  /users/with-new-laundry:
+  /users/with-laundry:
     post:
       tags:
         - Laundries
         - Users
       security: []
       description: Create a laundry and user
-      operationId: createUserWithNewLaundry
+      operationId: createUserWithLaundry
       parameters:
-        - name: createUserWithNewLaundryBody
+        - name: createUserWithLaundryBody
           in: body
           schema:
             required:
@@ -135,53 +135,6 @@ paths:
               name:
                 $ref: "#/definitions/name"
               googlePlaceId:
-                type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/LaundryAndUser"
-        "409":
-          description: Conflict
-          schema:
-            $ref: "#/definitions/Error"
-        "403":
-          description: Unauthorized
-          schema:
-            $ref: "#/definitions/Error"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/Error"
-  /users/with-laundry:
-    post:
-      tags:
-        - Laundries
-        - Users
-      security: []
-      description: Create user and attach a laundry
-      operationId: createUserWithLaundry
-      parameters:
-        - name: createUserWithLaundryBody
-          in: body
-          schema:
-            required:
-              - laundryId
-              - key
-              - displayName
-              - email
-              - password
-            properties:
-              displayName:
-                $ref: "#/definitions/nonEmpty"
-              email:
-                type: string
-                format: email
-              password:
-                $ref: "#/definitions/password"
-              laundryId:
-                type: string
-              key:
                 type: string
       responses:
         "200":
